fix alignment

--- a/src/AppHeader.css
+++ b/src/AppHeader.css
@@ -1,5 +1,5 @@
 .fancyButton {
-  font-size: 24px;
+  font-size: 20px;
   font-weight: bold;
   display: inline-block;
   margin: 0 auto;
